--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp-retry==2.9.1
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
+APScheduler==3.11.0
 attrs==25.4.0
 bcrypt==4.1.2
 certifi==2025.8.3
@@ -50,6 +51,7 @@ starlette==0.48.0
 twilio==9.8.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.37.0
 uvloop==0.21.0
